@@ -1,3 +1,7 @@
+2012-06-29  LT140  <http://sites.google.com/site/ltsevenscore/>
+
+	* sample/string_symbol: Added.
+
 2012-02-15  LT140  <http://sites.google.com/site/ltsevenscore/>
 
 	* STLAllocator.h (cntl::STLAllocator): Renamed from
